--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,6 @@ jobs:
       with:
         node-version: 14
 
-    - name: Set working directory
-      run: cd ${{ github.workspace }}
-
     - name: Install dependencies
       run: npm ci
 
@@ -28,4 +25,5 @@ jobs:
       run: npm run test_c8
 
     - name: Upload coverage to Coveralls
-      run: npm install coveralls && npx coveralls
+      run: npm install coveralls && npx coverall
+      
