--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,21 +12,33 @@ defaults:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: npm
-      - name: install dependencies
-        run: npm ci
-      - name: Run tests
-        run: npm run test || echo "Tests failed, but continuing..."
-      - name: Create test report
-        run: npx nyc report --reporter=lcov --reporter=text-lcov || echo "Failed to create test report, but continuing..."    
-      - name: Coveralls
-        uses: coverallsapp/github-action@v2
-        with:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+          
+    - name: npm install
+      run: 
+        npm install        
+        
+    - name: run tests
+      run: 
+        npm run test || echo "Tests failed, but continuing..."
+		
+    - name: Create test report
+      run: npx nyc report --reporter=lcov --reporter=text-lcov || echo "Failed to create test report, but continuing..."          
+
+    - name: create report
+      run: nyc report --reporter=lcov --reporter=text-lcov
+        
+    - name: Coveralls
+      uses: coverallsapp/github-action@v2
+      with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
     env:
-      COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}		
+      COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
