--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,17 +20,15 @@ jobs:
     - name: Set up node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
-          
-    - name: npm install
+        node-version: '16'    
+      
+    - name: install packages
       run: 
-        npm install        
-        
+        npm ci
+                
     - name: run tests
-      run: npm run test || echo "Tests failed, but continuing..."
-		
-    - name: Create test report
-      run: npx nyc report --reporter=lcov --reporter=text-lcov || echo "Failed to create test report, but continuing..."          
+      run: 
+        npm run test         
 
     - name: create report
       run: nyc report --reporter=lcov --reporter=text-lcov
